; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_get_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_get_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GET_ALL_ERRORS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_get_path(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i32, i32* @GET_ALL_ERRORS, align 4
  %13 = call i32 @get_entry(%struct.TYPE_4__** %8, i32* %10, i8* %11, i32 1, i32 %12)
  store i32 %13, i32* %9, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %9, align 4
  store i32 %16, i32* %4, align 4
  br label %26

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @git_config_parse_path(i32* %18, i32 %21)
  store i32 %22, i32* %9, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %24 = call i32 @git_config_entry_free(%struct.TYPE_4__* %23)
  %25 = load i32, i32* %9, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %17, %15
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @get_entry(%struct.TYPE_4__**, i32*, i8*, i32, i32) #1

declare dso_local i32 @git_config_parse_path(i32*, i32) #1

declare dso_local i32 @git_config_entry_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
